Позиционирует текст с фоном в секции "Чем мы занимаемся"

--- a/index.html
+++ b/index.html
@@ -114,14 +114,25 @@
         <div class="container">
             <h2 class="section-title">Чем мы занимаемся</h2>
             <ul class="business-list">
-                <li>
-                    <img src="./images/work-img-1.jpg" alt="разработка" width="370">
+                <li class="business-item">
+                    <div class="business-work">
+                        <img src="./images/work-img-1.jpg" alt="разработка" width="370">
+                        <p class="business-text">Десктопные приложения</p>
+                    </div>
+                    
                 </li>
-                <li>
-                    <img src="./images/work-img-2.jpg" alt="дизайн" width="370">
+                <li class="business-item">
+                    <div class="business-work">
+                        <img src="./images/work-img-2.jpg" alt="дизайн" width="370">
+                        <p class="business-text">Мобильные приложения</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="./images/work-img-3.jpg" alt="маркетинг" width="370">
+                <li class="business-item">
+                    <div class="business-work">
+                        <img src="./images/work-img-3.jpg" alt="маркетинг" width="370">
+                        <p class="business-text">Дизайнерские решения</p>
+                    </div>
+                    
                 </li>
             </ul>
         </div>
